Setting the height on the body element to fix the issue ".auto-scrollable is not letting the sidebar hide on small screen size when the hide button is clicked"

--- a/src/main/resources/static/css/Base.css
+++ b/src/main/resources/static/css/Base.css
@@ -10,7 +10,6 @@ html, body {
 }
 
 .auto-scrollable {
-    height: 85vh;
     overflow: auto;
 }
 
