--- a/src/main/resources/static/css/layout/HolyGrail-body.css
+++ b/src/main/resources/static/css/layout/HolyGrail-body.css
@@ -1,5 +1,6 @@
 .HolyGrail-body {
     flex: auto;
+    height: 85vh;
     display: flex;
     margin-top: 10px;
     margin-bottom: 10px;
