--- a/src/main/resources/static/css/layout/HolyGrail.css
+++ b/src/main/resources/static/css/layout/HolyGrail.css
@@ -24,7 +24,3 @@ body {
     margin-top: 10px;
     margin-bottom: 10px;
 }
-
-.HolyGrail .vertical-center {
-    min-height: 100%;
-}
